// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Accordion Large Accordion 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--accordion ilo--accordion--large"
  >
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-l1"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--large"
          id="button-l1"
          onClick={[Function]}
        >
          Item1
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-l1"
        className="ilo--accordion__panel collapse"
        id="panel-l1"
        role="region"
      >
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
      </div>
    </li>
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-l2"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--large"
          id="button-l2"
          onClick={[Function]}
        >
          Item2
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-l2"
        className="ilo--accordion__panel collapse"
        id="panel-l2"
        role="region"
      >
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Accordion Small Accordion 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--accordion ilo--accordion--small"
  >
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-s1"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--small"
          id="button-s1"
          onClick={[Function]}
        >
          Item1
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-s1"
        className="ilo--accordion__panel collapse"
        id="panel-s1"
        role="region"
      >
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
      </div>
    </li>
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-s2"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--small"
          id="button-s2"
          onClick={[Function]}
        >
          Item2
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-s2"
        className="ilo--accordion__panel collapse"
        id="panel-s2"
        role="region"
      >
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Button Disabled Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--primary"
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Disabled Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--button ilo--button--large ilo--button--primary icon icon__position--left  --light"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      className="link__label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Large Button",
        }
      }
    />
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 11H13V6H11V11H6V13H11V18H13V13H18V11Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Storyshots Components/Button Medium Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--button ilo--button--medium ilo--button--primary icon icon__position--left  --light"
    href="#"
    rel=""
    target=""
  >
    <span
      className="link__label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Medium Button",
        }
      }
    />
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 11H13V6H11V11H6V13H11V18H13V13H18V11Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Storyshots Components/Button Primary Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--primary"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Primary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Secondary Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--secondary"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Secondary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--button ilo--button--small ilo--button--primary icon icon__position--left  --light"
    href="#"
    rel=""
    target=""
  >
    <span
      className="link__label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Small Button",
        }
      }
    />
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 11H13V6H11V11H6V13H11V18H13V13H18V11Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Storyshots Components/Button Tertiary Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--tertiary"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Tertiary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Empty Empty 1 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="storybook ilo--empty"
  />
</div>
`;

exports[`Storyshots Components/Heading Heading Level 1 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h1
    className="ilo--h1 ilo--h1--actionable"
  >
    Heading 1
  </h1>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 2 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h2
    className="ilo--h2"
  >
    Heading 2
  </h2>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 3 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h3
    className="ilo--h3"
  >
    Heading 3
  </h3>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 4 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h4
    className="ilo--h4"
  >
    Heading 4
  </h4>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 5 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h5
    className="ilo--h5"
  >
    Heading 5
  </h5>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 6 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h6
    className="ilo--h6"
  >
    Heading 6
  </h6>
</div>
`;

exports[`Storyshots Components/Link Dark Link 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--link ilo--link--dark"
    href="https://www.wikipedia.org/"
    rel=""
    target=""
  >
    
    This is text for the link
  </a>
</div>
`;

exports[`Storyshots Components/Link Light Link 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--link ilo--link--light"
    href="https://www.google.com/"
    rel=""
    target=""
  >
    
    This is text for the link
  </a>
</div>
`;

exports[`Storyshots Components/List Horizontal List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--list ilo--list--horizontal ilo--list--unordered"
  >
    <h5
      className="ilo--list__title"
    >
      Horizontal List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/List Ordered List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ol
    className="ilo--list ilo--list--ordered"
  >
    <h5
      className="ilo--list__title"
    >
      Ordered List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica. Arabica is the most popular type of coffee, hands down.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta. While Arabica is the most popular, Robusta is cheaper and stronger.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee is as simple as it gets with ground coffee beans steeped in hot water, served warm.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte. Made with espresso and hot steamed milk, milkier than a cappuccino.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino. Made with espresso and milk that has been frothed up with pressurized steam.
      </p>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Components/List Unordered List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--list ilo--list--unordered"
  >
    <h5
      className="ilo--list__title"
    >
      Unordered List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica. Arabica is the most popular type of coffee, hands down.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta. While Arabica is the most popular, Robusta is cheaper and stronger.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee is as simple as it gets with ground coffee beans steeped in hot water, served warm.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte. Made with espresso and hot steamed milk, milkier than a cappuccino.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino. Made with espresso and milk that has been frothed up with pressurized steam.
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/List Unstyled List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--list ilo--list--unstyled"
  >
    <h5
      className="ilo--list__title"
    >
      Unstyled List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica. Arabica is the most popular type of coffee, hands down.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta. While Arabica is the most popular, Robusta is cheaper and stronger.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee is as simple as it gets with ground coffee beans steeped in hot water, served warm.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte. Made with espresso and hot steamed milk, milkier than a cappuccino.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino. Made with espresso and milk that has been frothed up with pressurized steam.
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/RichText Rich Text 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--richtext"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>Apollo 11</h1><p><strong>Apollo 11</strong> was the spaceflight that landed the first humans, Americans <a href='http://en.wikipedia.org/wiki/Neil_Armstrong'>Neil Armstrong</a> and <a href='http://en.wikipedia.org/wiki/Buzz_Aldrin'>Buzz Aldrin</a>, on the Moon on July 20, 1969, at 20:18 UTC. Armstrong became the first to step onto the lunar surface 6 hours later on July 21 at 02:56 UTC.</p><p>Armstrong spent about <s>three and a half</s> two and a half hours outside the spacecraft, Aldrin slightly less; and together they collected 47.5 pounds (21.5&nbsp;kg) of lunar material for return to Earth. A third member of the mission, <a href='http://en.wikipedia.org/wiki/Michael_Collins_(astronaut)'>Michael Collins</a>, piloted the <a href='http://en.wikipedia.org/wiki/Apollo_Command/Service_Module'>command</a> spacecraft alone in lunar orbit until Armstrong and Aldrin returned to it for the trip back to Earth. <figure><img alt='placeholder image' class='right' src='https://place-hold.it/400x300?text=Placeholder Image'><figcaption>The caption for this image</figcaption></figure></p><h2>Broadcasting and <em>quotes</em> <a id='quotes' name='quotes'></a></h2><p>Broadcast on live TV to a world-wide audience, Armstrong stepped onto the lunar surface and described the event as:</p><blockquote><p>One small step for [a] man, one giant leap for mankind</p><cite>Neil Armstrong</cite></blockquote><h2>Technical details <a id='tech-details' name='tech-details'></a></h2><p>Launched by a <strong>Saturn V</strong> rocket from <a href='http://en.wikipedia.org/wiki/Kennedy_Space_Center'>Kennedy Space Center</a> in Merritt Island, Florida on July 16, Apollo 11 was the fifth manned mission of <a href='http://en.wikipedia.org/wiki/NASA'>NASA</a>&#39;s Apollo program. The Apollo spacecraft had three parts:</p><ol><li><strong>Command Module</strong> with a cabin for the three astronauts which was the only part which landed back on Earth</li><li><strong>Service Module</strong> which supported the Command Module with propulsion, electrical power, oxygen and water</li><li><strong>Lunar Module</strong> for landing on the Moon.</li></ol><p>After being sent to the Moon by the Saturn V&#39;s upper stage, the astronauts separated the spacecraft from it and travelled for three days until they entered into lunar orbit. Armstrong and Aldrin then moved into the Lunar Module and landed in the <a href='http://en.wikipedia.org/wiki/Mare_Tranquillitatis'>Sea of Tranquility</a>. They stayed a total of about 21 and a half hours on the lunar surface. After lifting off in the upper part of the Lunar Module and rejoining Collins in the Command Module, they returned to Earth and landed in the <a href='http://en.wikipedia.org/wiki/Pacific_Ocean'>Pacific Ocean</a> on July 24.</p><hr><p><small>Source: <a href='http://en.wikipedia.org/wiki/Apollo_11'>Wikipedia.org</a></small></p>",
      }
    }
  />
</div>
`;
